--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ p {
     top:8%;
     transition: all;
     transform: scale(0);
+    z-index: 1;
     transition-duration: 0.3s;
 }
 
@@ -324,6 +325,44 @@ p {
 
 .letra_rojo {
     color: #af0303;
+}
+
+/* Contenedor informativo */
+
+.informativo {
+    position: fixed;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    color: #121212;
+    bottom: -100px;
+    width: 100%;
+    animation-name: Anim_Footer;
+    animation-duration: 4s;
+}
+
+.informativo_div {
+    padding: 5px 20px;
+    border-radius: 10px;
+    background: #FF4081;
+}
+
+.informativo_div_ok {
+    background: #5f8ec9;
+}
+
+/* Animacion del contenedor informativo */
+
+@keyframes Anim_Footer {
+    20%{
+        bottom: 20px;
+    }
+    80%{
+        bottom: 20px;
+    }
+    100%{
+        bottom: -100px;
+    }
 }
 
 /* Presentacion */
